<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for starting a new order -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StartFragment">


    <data>
        <variable
            name="startFragment"
            type="com.example.TrainFoodOrder.StartFragment" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout


    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    android:background="@drawable/signup_image_bg_removed">


    <Button
        android:id="@+id/signup"
        android:layout_width="381dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:onClick="@{() -> startFragment.goToNextScreen()}"
        android:text="@string/action_sign_in"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_address"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="@color/purple_700" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:hint="@string/prompt_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:hint="@string/prompt_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_name">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:hint="@string/prompt_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_phone">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage" />

    </com.google.android.material.textfield.TextInputLayout>




    <!--    <EditText-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="24dp"-->
    <!--        android:layout_marginBottom="8dp"-->
    <!--        android:hint="@string/prompt_phone"-->
    <!--        android:imeActionLabel="@string/action_sign_in_short"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        android:inputType="phone"-->
    <!--        android:minHeight="48dp"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/password2"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.875"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/username" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/password2"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginEnd="24dp"-->
    <!--        android:hint="@string/prompt_address"-->
    <!--        android:imeActionLabel="@string/action_sign_in_short"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:minHeight="48dp"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/username"-->
    <!--        app:layout_constraintVertical_bias="0.382" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/username"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginEnd="24dp"-->
    <!--        android:hint="@string/prompt_name"-->
    <!--        android:inputType="textEmailAddress"-->
    <!--        android:minHeight="48dp"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_name"
        app:layout_constraintEnd_toStartOf="@+id/signup_name"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_name"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_round_account_circle_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="53dp"
        app:srcCompat="@drawable/ic_round_local_phone_24"
        app:layout_constraintBottom_toBottomOf="@+id/signup_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_phone" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="30dp"
        android:layout_height="53dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_round_home_24"
        app:layout_constraintBottom_toBottomOf="@+id/signup_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_address" />

</androidx.constraintlayout.widget.ConstraintLayout>


    </layout>
