<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Layout for order summary -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SummaryFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.TrainFoodOrder.model.OrderViewModel" />

        <variable
            name="summaryFragment"
            type="com.example.TrainFoodOrder.SummaryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <!-- Group the order details into a single ViewGroup and set focusable = true,
                 so all fields will be read aloud together by the accessibility service -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="593dp"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quantity_label"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_label"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/your_item_value"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{ viewModel.itemName}"
                    tools:text="Chicken Bucket" />

                <View
                    android:id="@+id/divider1"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/item_price_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_per_order_label" />

                <TextView
                    android:id="@+id/item_price_value"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.priceFormatter}"
                    tools:text="Rs 399" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/side_margin" />

                <TextView
                    android:id="@+id/order_quantity_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_label" />

                <TextView
                    android:id="@+id/order_quantity_value"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.itemQuantity}"
                    tools:text="2" />

                <View
                    android:id="@+id/divider3"
                    style="@style/Widget.Cupcake.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/side_margin"
                    android:layout_marginBottom="@dimen/margin_between_elements" />

                <TextView
                    android:id="@+id/order_delivery_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_label" />

                <TextView
                    android:id="@+id/order_delivery_value"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/order_summary_margin"
                    android:text="@{viewModel.date}"
                    tools:text="Sunday" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/user_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="124dp"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:text="@{viewModel.userPhone}"

                        app:layout_constraintEnd_toEndOf="@+id/divider4"
                        app:layout_constraintHorizontal_bias="0.026"
                        app:layout_constraintStart_toStartOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/divider4"
                        tools:text="8435994748" />

                    <TextView
                        android:id="@+id/user_address"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_width="183dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:text="@{viewModel.userAddress}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.029"
                        app:layout_constraintStart_toStartOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/divider4"
                        tools:text="RCP Colony ......\n...........\n....." />

                    <TextView
                        android:id="@+id/total"
                        style="@style/Widget.Cupcake.TextView.FinalPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="244dp"
                        android:layout_marginEnd="12dp"
                        android:text="@{@string/total_price(viewModel.price)}"
                        app:layout_constraintEnd_toEndOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/divider4"
                        tools:text="Total $5.00" />

                    <View
                        android:id="@+id/divider4"
                        style="@style/Widget.Cupcake.Divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp" />

                    <TextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_marginTop="60dp"
                        android:text="@{viewModel.userName}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/user_info"
                        tools:text="Abhinav Kumar" />

                    <TextView
                        android:id="@+id/user_train"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:layout_width="178dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="60dp"
                        android:text="@{viewModel.userTrain}"
                        app:layout_constraintStart_toStartOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/textView7"
                        tools:text="MahaRaja Express" />

                    <TextView
                        android:id="@+id/user_carriage"
                        android:layout_width="187dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="124dp"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:text="@{@string/carriage_number(viewModel.userCarriage)}"
                        app:layout_constraintStart_toStartOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/divider4"
                        tools:text="Carriage:S1" />

                    <TextView
                        android:id="@+id/user_seat"
                        android:layout_width="172dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="180dp"
                        style="@style/Widget.Cupcake.TextView.OrderSummary"
                        android:text="@{@string/seat_number(viewModel.userSeat)}"
                        app:layout_constraintStart_toStartOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/textView7"
                        tools:text="Seat:S5" />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="1dp"
                        android:layout_height="270dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/divider4"
                        app:layout_constraintStart_toStartOf="@+id/divider4"
                        app:layout_constraintTop_toTopOf="@+id/divider4" />

                    <TextView
                        android:id="@+id/user_info"
                        style="@style/Widget.Cupcake.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="260dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Contact Info"
                        app:layout_constraintBottom_toBottomOf="@+id/divider6"
                        app:layout_constraintStart_toStartOf="@+id/divider4" />

                    <TextView
                        android:id="@+id/textView7"
                        style="@style/Widget.Cupcake.TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="260dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Delivery Location"
                        app:layout_constraintBottom_toBottomOf="@+id/divider6"
                        app:layout_constraintEnd_toEndOf="@+id/divider4" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:onClick="@{() -> summaryFragment.sendOrder()}"
                android:text="@string/send"
                app:cornerRadius="13dp" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:onClick="@{() -> summaryFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:cornerRadius="13dp" />

        </LinearLayout>
    </ScrollView>
</layout>